# Veron1CA

./: .gitignore  LICENSE  README.md  filtered.txt  index.html  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.md
assets/css/: responsive.css  style.css
