[tool.poetry]
name = "veronica"
version = "1.2S"
description = "Veron1CA is an open source Discord moderation & music bot designed to do server management and entertain both at once. It has a bunch of easy-to-use commands that can pretty much make the work of customizating your Discord server a breeze!"
authors = ["hitblast <hitblastofficial@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
async-timeout = "^3.0.1"
discord = "^1.0.1"
flask = "^1.1.2"
youtube-dl = "^2021.3.2"
PyNaCl = "^1.4.0"
python-decouple = "^3.4"
topggpy = "^1.3.0"
GitPython = "^3.1.18"
better-profanity = "^0.7.0"
tinydb = "^4.5.1"
uvloop = "^0.16.0"
disnake = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
